# ATC_Display

./: .gitignore  BUGS_FIXED.md  CODE_IMPROVEMENTS.md  FIXES_SUMMARY.md  MODULE_NOT_FOUND_FIX.md  MULTI_MEASURE_LINES.md  OPTIMIZATION_II.md  PREDICT_LINE_FEATURE.md  PREDICT_LINE_TEST_PLAN.md  README.md  TRACK_DIAGNOSTICS.md  pyproject.toml
atc_display/: __init__.py  __main__.py  asd_widget.py  cat062.py  clw_widget.py  config.py  geometry.py  giw_widget.py  map_data.py  maps_widget.py  pyproject.toml  radar_replay.py  replay_widget.py  udp_receiver.py  wx_map.py
atc_display/atc_display.egg-info/: PKG-INFO  SOURCES.txt
atc_display/config/: ip_setting.json  map_setting.json
atc_display/mapData/: AllMaps.txt  AllMaps_gz.txt  CurrentMaps.txt  Fix.txt  MapAllot.txt  draw_1221a.txt  draw_1221b.txt  draw_15SID.txt  draw_ACC_FDRG.txt  draw_AIRPORT.txt  draw_AIRSHOW.txt  draw_ALL_RADAR.txt  draw_APPGATE.txt  draw_BACKGROUND1.txt  draw_BACKGROUND2.txt  draw_BORDER.txt  draw_BORDER1.txt  draw_CCO_CDO_N.txt  draw_CCO_CDO_S.txt  draw_CC_BOX.txt  draw_CC_RT1.txt  draw_CC_RT2.txt  draw_CC_XSJ.txt  draw_CENCUN.txt  draw_CENCUN_301.txt  draw_CENCUN_302.txt  draw_CENCUN_303.txt  draw_CENCUN_304.txt  draw_CENCUN_305.txt  draw_CENCUN_306.txt  draw_CENCUN_307.txt  draw_CENCUN_308.txt  draw_CENCUN_309.txt  draw_CENCUN_310.txt  draw_CENCUN_311.txt  draw_CENCUN_HX1.txt  draw_CENCUN_HX2.txt  draw_CENCUN_HX3.txt  draw_CENCUN_all.txt  draw_CH_GLD.txt  (+205 more)
