[project]
name = "atc-display"
version = "0.1.0"
description = "ATC Radar Display - CAT062 Data Visualization"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["atc_display"]
